# Highwind

./: CMakeCache.txt  CMakeLists.txt  Highwind.sln  Makefile  README.md  cmake_install.cmake
Highwind/: CMakeLists.txt  Camera.h  Camera.hpp  Component.h  EditorInterface.cpp  EditorInterface.h  Environment.cpp  Environment.h  FragmentShader.fs  FragmentShader.hpp  GLTFModel.cpp  GLTFModel.h  Game.cpp  Game.h  GlobalCache.h  GraphicsEngine.hpp  GraphicsOptions.h  HWObject.hpp  HWUtil.hpp  Highwind.vcxproj  Highwind.vcxproj.filters  HighwindWindow.hpp  Light.h  Makefile  Material.h  Mesh.h  Model.h  OBJLoader.hpp  Primitives.h  Shader.h  Shader.hpp  ShadowMapFBO.h  ShadowMapHandler.cpp  ShadowMapHandler.h  SkyBoxHandler.h  Texture.h  Texture.hpp  Transform.hpp  VertexShader.hpp  cmake_install.cmake  (+11 more)
Highwind/resources/3d/: readme.txt
Highwind/resources/alyssa/: frdata.archive  level.archive
Highwind/resources/shaders/: FragmentShader.fs  fragment_core.glsl  shadow_map_fragment.glsl  shadow_map_vertex.glsl  vertex_core.glsl
libraries/SOIL2/lib/: soil2-debug.lib  soil2.lib
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
